--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "jquery": "^3.6.1",
+        "laravel-echo": "^1.14.0",
+        "pusher-js": "^7.4.0"
     }
 }
